Added blaze and exothermic pages

--- a/public/support-us.html
+++ b/public/support-us.html
@@ -47,7 +47,7 @@
             </div>
         </nav>
         <main>
-            <div class="banner">
+            <div class="banner"></div>
                 <div id="center-header-div">
                     <div id="support-header-text-div">
                         <h1>Ignite Robotics with your support</h1>
