--- a/public/summer.html
+++ b/public/summer.html
@@ -20,10 +20,10 @@
           </a>
           <ul class="nav-links">
               <li><a href="#">Exothermic</a></li>
-              <li><a href="#">Quantum</a></li>
+              <li><a href="./quantum.html">Quantum</a></li>
               <li><a href="#">Blaze</a></li>
               <li><a href="./summer.html">Summer Classes</a></li>
-              <li><a href="#">Support</a></li>
+              <li><a href="./support-us.html">Support</a></li>
               <li><a href="./about.html">About Us</a></li>
               <li><a href="./contact.html">Contact</a></li>
               <li><a href="#" class="login-button">Login</a></li>
@@ -42,13 +42,13 @@
               <li><a href="#">Quantum</a></li>
               <li><a href="#">Blaze</a></li>
               <li><a href="./summer.html">Summer Classes</a></li>
-              <li><a href="#">Support</a></li>
+              <li><a href="./support-us.html">Support</a></li>
               <li><a href="./about.html">About Us</a></li>
               <li><a href="./contact.html">Contact</a></li>
               <li><a href="#" class="login-button">Login</a></li>
           </ul>
       </div>
-  </nav>
+    </nav>
     <main>
       <div class="banner">
         <img src="./img/summer_header.png" alt="Summer Courses photo" class="banner">
@@ -76,7 +76,7 @@
             ready to excel in the exciting world of robotics.
           </p>
         </div>
-        <div id="courses">
+        <div class="outer-div">
           <h2>Courses Offered</h2>
           <div id="course-gallery">
             <div class="course">
@@ -93,7 +93,7 @@
                 <p class="course-desc">
                   Objective: Learn about Github, VSCode, and C++
                 </p>
-                <button class="course-enroll"><p>Enroll</p></button>
+                <button><p>Enroll</p></button>
               </div>
             </div>
             <div class="course">
@@ -107,7 +107,7 @@
                   to VRC
                 </p>
 
-                <button class="course-enroll"><p>Enroll</p></button>
+                <button><p>Enroll</p></button>
               </div>
             </div>
             <div class="course">
@@ -120,7 +120,7 @@
                   Objective: Learn computer- aided design software (Autodesk
                   Fusion 360)
                 </p>
-                <button class="course-enroll"><p>Enroll</p></button>
+                <button><p>Enroll</p></button>
               </div>
             </div>
           </div>
