--- a/public/about.html
+++ b/public/about.html
@@ -17,10 +17,10 @@
                 </a>
                 <ul class="nav-links">
                     <li><a href="#">Exothermic</a></li>
-                    <li><a href="#">Quantum</a></li>
+                    <li><a href="./quantum.html">Quantum</a></li>
                     <li><a href="#">Blaze</a></li>
                     <li><a href="./summer.html">Summer Classes</a></li>
-                    <li><a href="#">Support</a></li>
+                    <li><a href="./support-us.html">Support</a></li>
                     <li><a href="./about.html">About Us</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                     <li><a href="#" class="login-button">Login</a></li>
@@ -39,7 +39,7 @@
                     <li><a href="#">Quantum</a></li>
                     <li><a href="#">Blaze</a></li>
                     <li><a href="./summer.html">Summer Classes</a></li>
-                    <li><a href="#">Support</a></li>
+                    <li><a href="./support-us.html">Support</a></li>
                     <li><a href="./about.html">About Us</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                     <li><a href="#" class="login-button">Login</a></li>
