--- a/public/login.html
+++ b/public/login.html
@@ -15,42 +15,38 @@
   <body>
     <nav>
       <div>
-        <a href="./index.html">
-          <img
-            src="./img/ignite_logo.png"
-            alt="Ignite Robotics Logo"
-            class="nav-logo"
-          />
-        </a>
-        <ul class="nav-links">
-          <li><a href="#">Exothermic</a></li>
-          <li><a href="#">Quantum</a></li>
-          <li><a href="#">Blaze</a></li>
-          <li><a href="./summer.html">Summer Classes</a></li>
-          <li><a href="#">Support</a></li>
-          <li><a href="./about.html">About Us</a></li>
-          <li><a href="./contact.html">Contact</a></li>
-          <li><a href="#" class="login-button">Login</a></li>
-        </ul>
-        <!-- Hamburger Menu -->
-        <div class="hamburger-menu">
-          <a>
-            <img src="./img/hamburger-menu.svg" alt="hamburger menu" />
+          <a href="./index.html">
+              <img src="./img/ignite_logo.png" alt="Ignite Robotics Logo" class="nav-logo">
           </a>
-        </div>
+          <ul class="nav-links">
+              <li><a href="#">Exothermic</a></li>
+              <li><a href="./quantum.html">Quantum</a></li>
+              <li><a href="#">Blaze</a></li>
+              <li><a href="./summer.html">Summer Classes</a></li>
+              <li><a href="./support-us.html">Support</a></li>
+              <li><a href="./about.html">About Us</a></li>
+              <li><a href="./contact.html">Contact</a></li>
+              <li><a href="#" class="login-button">Login</a></li>
+          </ul>
+          <!-- Hamburger Menu -->
+          <div class="hamburger-menu">
+              <a>
+                  <img src="./img/hamburger-menu.svg" alt="hamburger menu">
+              </a>
+          </div>
       </div>
       <!-- Popup menu -->
       <div class="popup-menu" id="popup-menu">
-        <ul class="popup-nav-links">
-          <li><a href="#">Exothermic</a></li>
-          <li><a href="#">Quantum</a></li>
-          <li><a href="#">Blaze</a></li>
-          <li><a href="./summer.html">Summer Classes</a></li>
-          <li><a href="#">Support</a></li>
-          <li><a href="./about.html">About Us</a></li>
-          <li><a href="./contact.html">Contact</a></li>
-          <li><a href="#" class="login-button">Login</a></li>
-        </ul>
+          <ul class="popup-nav-links">
+              <li><a href="#">Exothermic</a></li>
+              <li><a href="#">Quantum</a></li>
+              <li><a href="#">Blaze</a></li>
+              <li><a href="./summer.html">Summer Classes</a></li>
+              <li><a href="./support-us.html">Support</a></li>
+              <li><a href="./about.html">About Us</a></li>
+              <li><a href="./contact.html">Contact</a></li>
+              <li><a href="#" class="login-button">Login</a></li>
+          </ul>
       </div>
     </nav>
     <main>
