--- a/public/support-us.html
+++ b/public/support-us.html
@@ -17,10 +17,10 @@
                 </a>
                 <ul class="nav-links">
                     <li><a href="#">Exothermic</a></li>
-                    <li><a href="#">Quantum</a></li>
+                    <li><a href="./quantum.html">Quantum</a></li>
                     <li><a href="#">Blaze</a></li>
                     <li><a href="./summer.html">Summer Classes</a></li>
-                    <li><a href="#">Support</a></li>
+                    <li><a href="./support-us.html">Support</a></li>
                     <li><a href="./about.html">About Us</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                     <li><a href="#" class="login-button">Login</a></li>
@@ -45,7 +45,7 @@
                     <li><a href="#" class="login-button">Login</a></li>
                 </ul>
             </div>
-        </nav>
+          </nav>
         <main>
             <div class="banner">
                 <div id="center-header-div">
@@ -57,36 +57,36 @@
             </div>
             <div class="centered-section">
                 <img id="northwest-photo" src="./img/northwest_photo.png">
-                <div id="how-to-get-involved">
+                <div class="primary-section">
                     <h2>How to get involved</h2>
                     <div id="support-grid">
                         <div class="support-method">
-                            <img class="suport-method-icon" src="./img/money.png">
+                            <img class="suport-method-icon" src="./img/Money.svg">
                             <h3>Donations</h3>
                             <p class="support-method-text">Support Ignite Robotics by donating using the link below, or your company’s donation portal<br>(Benevity ID: 871306813).</p>
                             <p class="support-method-text">Donations go towards sustaining and improving our operations to further support the student community’s exploration of STEM.</p>
                             <button>Donate</button>
                         </div>
                         <div class="support-method">
-                            <img class="suport-method-icon" src="./img/user_alt.png">
+                            <img class="suport-method-icon" src="./img/user_alt.svg">
                             <h3>Volunteer</h3>
                             <p class="support-method-text">Volunteer your time and skills to help make our events a success. As a volunteer, your support is invaluable—whether it's assisting with event setup, managing activities, or providing guidance during competitions.</p>
                             <button>Volunteer</button>
                         </div>
                         <div class="support-method">
-                            <img class="suport-method-icon" src="./img/gift.png">
+                            <img class="suport-method-icon" src="./img/gift.svg">
                             <h3>Sponsorship Connections</h3>
                             <p class="support-method-text">If you or someone you know is interested in sponsoring Ignite Robotics, reach out to us and we’ll send over our sponsorship resources!</p>
                             <button>Sponsorship Packet</button>
                         </div>
                         <div class="support-method">
-                            <img class="suport-method-icon" src="./img/chart_alt.png">
+                            <img class="suport-method-icon" src="./img/chart_alt.svg">
                             <h3>Corporate Matching</h3>
                             <p class="support-method-text">Many large corporations such as Microsoft, Google, GE, and JP Morgan match employee donations at a 1:1 ratio or more for full and part-time employees.</p>
                             <p class="support-method-text">Filling out your employer’s match request form can substantially increase the impact of your contribution! Please let us know if you need assistance with this process!</p>
                         </div>
                         <div class="support-method">
-                            <img class="suport-method-icon" src="./img/group.png">
+                            <img class="suport-method-icon" src="./img/Group.svg">
                             <h3>Volunteer Grants</h3>
                             <p class="support-method-text">Companies such as Microsoft, Dell, and Verizon also have volunteer grant programs. Supervising the Robot House after-hours, helping out at events, and other Ignite volunteering opportunities translate into direct contributions from your employer—matched on an hourly rate that they give depending on how many hours you volunteered.</p>
                         </div>
