--- a/public/quantum.html
+++ b/public/quantum.html
@@ -25,25 +25,6 @@
                 <li><a href="./contact.html">Contact</a></li>
                 <li><a href="#" class="login-button">Login</a></li>
             </ul>
-            <!-- Hamburger Menu -->
-            <div class="hamburger-menu">
-                <a>
-                    <img src="./img/hamburger-menu.svg" alt="hamburger menu">
-                </a>
-            </div>
-        </div>
-        <!-- Popup menu -->
-        <div class="popup-menu" id="popup-menu">
-            <ul class="popup-nav-links">
-                <li><a href="#">Exothermic</a></li>
-                <li><a href="#">Quantum</a></li>
-                <li><a href="#">Blaze</a></li>
-                <li><a href="./summer.html">Summer Classes</a></li>
-                <li><a href="./support-us.html">Support</a></li>
-                <li><a href="./about.html">About Us</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-                <li><a href="#" class="login-button">Login</a></li>
-            </ul>
         </div>
       </nav>
       <main>
@@ -66,7 +47,7 @@
                 <p>Quantum Robotics Division welcomes high school students under 19 by May 1st, particularly those <b>new to the VEX Robotics Competition or transitioning from middle school programs.</b> This division provides a nurturing environment that encourages beginners to develop foundational robotics skills.</p>
                 <p>This division focuses on providing a comprehensive introduction to robotics, with an emphasis on mentor-led training and development. Students are introduced to essential robotics technologies and team collaboration practices.</p>
               </div>
-              <img class="division-img" src="img/quantum_logo.png">
+              <img class="division-img" src="img/quantum_logo.png" alt="quantum logo">
             </div>
   
             <div class="outer-div">
@@ -74,7 +55,7 @@
               <div class="educational-outcomes-grid">
                 <div class="educational-outcome">
                   <div class="education-icon-container">
-                    <img src="./img/terminal.svg">
+                    <img src="./img/terminal.svg" alt="terminal icon">
                   </div>
                   <h3>Technical Skills</h3>
                   <p>Your student will develop foundational skills in mechanical and electronic engineering, basic programming, sensor technology, and CAD.</p>
@@ -82,7 +63,7 @@
   
                 <div class="educational-outcome">
                   <div class="education-icon-container">
-                    <img src="./img/desktop.svg">
+                    <img src="./img/desktop.svg" alt="desktop icon">
                   </div>
                   <h3>Engineering Design</h3>
                   <p>Your student will get an introduction to the engineering design process and effective documentation practices.</p>
@@ -90,7 +71,7 @@
                 
                 <div class="educational-outcome">
                   <div class="education-icon-container">
-                    <img src="./img/group.svg">
+                    <img src="./img/group.svg" alt="group of people icon">
                   </div>
                   <h3>Leadership</h3>
                   <p>Your student will develop essential soft skills such as teamwork, communication, and problem-solving.</p>
