--- a/public/support-us.html
+++ b/public/support-us.html
@@ -25,27 +25,8 @@
                     <li><a href="./contact.html">Contact</a></li>
                     <li><a href="#" class="login-button">Login</a></li>
                 </ul>
-                <!-- Hamburger Menu -->
-                <div class="hamburger-menu">
-                    <a>
-                        <img src="./img/hamburger-menu.svg" alt="hamburger menu">
-                    </a>
-                </div>
             </div>
-            <!-- Popup menu -->
-            <div class="popup-menu" id="popup-menu">
-                <ul class="popup-nav-links">
-                    <li><a href="#">Exothermic</a></li>
-                    <li><a href="#">Quantum</a></li>
-                    <li><a href="#">Blaze</a></li>
-                    <li><a href="./summer.html">Summer Classes</a></li>
-                    <li><a href="#">Support</a></li>
-                    <li><a href="./about.html">About Us</a></li>
-                    <li><a href="./contact.html">Contact</a></li>
-                    <li><a href="#" class="login-button">Login</a></li>
-                </ul>
-            </div>
-          </nav>
+        </nav>
         <main>
             <div class="banner">
                 <div id="center-header-div">
@@ -56,37 +37,43 @@
                 </div>
             </div>
             <div class="centered-section">
-                <img id="northwest-photo" src="./img/northwest_photo.png">
+                <img id="northwest-photo" src="./img/northwest_photo.png" alt="Ignite the Northwest Signature Event">
                 <div class="primary-section">
                     <h2>How to get involved</h2>
                     <div id="support-grid">
                         <div class="support-method">
-                            <img class="suport-method-icon" src="./img/Money.svg">
-                            <h3>Donations</h3>
-                            <p class="support-method-text">Support Ignite Robotics by donating using the link below, or your company’s donation portal<br>(Benevity ID: 871306813).</p>
-                            <p class="support-method-text">Donations go towards sustaining and improving our operations to further support the student community’s exploration of STEM.</p>
+                            <div>
+                                <img class="support-method-icon" src="./img/Money.svg" alt="money icon">
+                                <h3>Donations</h3>
+                                <p class="support-method-text">Support Ignite Robotics by donating using the link below, or your company’s donation portal<br>(Benevity ID: 871306813).</p>
+                                <p class="support-method-text">Donations go towards sustaining and improving our operations to further support the student community’s exploration of STEM.</p>
+                            </div>
                             <button>Donate</button>
                         </div>
                         <div class="support-method">
-                            <img class="suport-method-icon" src="./img/user_alt.svg">
-                            <h3>Volunteer</h3>
-                            <p class="support-method-text">Volunteer your time and skills to help make our events a success. As a volunteer, your support is invaluable—whether it's assisting with event setup, managing activities, or providing guidance during competitions.</p>
+                            <div>
+                                <img class="support-method-icon" src="./img/User_alt.svg" alt="user icon">
+                                <h3>Volunteer</h3>
+                                <p class="support-method-text">Volunteer your time and skills to help make our events a success. As a volunteer, your support is invaluable—whether it's assisting with event setup, managing activities, or providing guidance during competitions.</p>
+                            </div>
                             <button>Volunteer</button>
                         </div>
                         <div class="support-method">
-                            <img class="suport-method-icon" src="./img/gift.svg">
-                            <h3>Sponsorship Connections</h3>
-                            <p class="support-method-text">If you or someone you know is interested in sponsoring Ignite Robotics, reach out to us and we’ll send over our sponsorship resources!</p>
+                            <div>
+                                <img class="support-method-icon" src="./img/Gift.svg" alt="gift icon">
+                                <h3>Sponsorship Connections</h3>
+                                <p class="support-method-text">If you or someone you know is interested in sponsoring Ignite Robotics, reach out to us and we’ll send over our sponsorship resources!</p>
+                            </div>
                             <button>Sponsorship Packet</button>
                         </div>
                         <div class="support-method">
-                            <img class="suport-method-icon" src="./img/chart_alt.svg">
+                            <img class="support-method-icon" src="./img/Chart_alt.svg" alt="chart icon">
                             <h3>Corporate Matching</h3>
                             <p class="support-method-text">Many large corporations such as Microsoft, Google, GE, and JP Morgan match employee donations at a 1:1 ratio or more for full and part-time employees.</p>
                             <p class="support-method-text">Filling out your employer’s match request form can substantially increase the impact of your contribution! Please let us know if you need assistance with this process!</p>
                         </div>
                         <div class="support-method">
-                            <img class="suport-method-icon" src="./img/Group.svg">
+                            <img class="support-method-icon" src="./img/Group.svg" alt="group of people icon">
                             <h3>Volunteer Grants</h3>
                             <p class="support-method-text">Companies such as Microsoft, Dell, and Verizon also have volunteer grant programs. Supervising the Robot House after-hours, helping out at events, and other Ignite volunteering opportunities translate into direct contributions from your employer—matched on an hourly rate that they give depending on how many hours you volunteered.</p>
                         </div>
