--- a/public/support-us.html
+++ b/public/support-us.html
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                     <div>
-                        <div class="footer-section">
+                        <div class="footer-section footer-links">
                             <p><a href="#">Home</a></p>
                             <p><a href="#">Exothermic</a></p>
                             <p><a href="#">Quantum</a></p>
