program page styling

--- a/public/about.html
+++ b/public/about.html
@@ -16,9 +16,9 @@
                     <img src="./img/ignite_logo.png" alt="Ignite Robotics Logo" class="nav-logo">
                 </a>
                 <ul class="nav-links">
-                    <li><a href="#">Exothermic</a></li>
+                    <li><a href="./exothermic.html">Exothermic</a></li>
                     <li><a href="./quantum.html">Quantum</a></li>
-                    <li><a href="#">Blaze</a></li>
+                    <li><a href="./blaze.html">Blaze</a></li>
                     <li><a href="./summer.html">Summer Classes</a></li>
                     <li><a href="./support-us.html">Support</a></li>
                     <li><a href="./about.html">About Us</a></li>
