--- a/public/quantum.html
+++ b/public/quantum.html
@@ -16,9 +16,9 @@
                 <img src="./img/ignite_logo.png" alt="Ignite Robotics Logo" class="nav-logo">
             </a>
             <ul class="nav-links">
-                <li><a href="#">Exothermic</a></li>
+                <li><a href="./exothermic.html">Exothermic</a></li>
                 <li><a href="./quantum.html">Quantum</a></li>
-                <li><a href="#">Blaze</a></li>
+                <li><a href="./blaze.html">Blaze</a></li>
                 <li><a href="./summer.html">Summer Classes</a></li>
                 <li><a href="./support-us.html">Support</a></li>
                 <li><a href="./about.html">About Us</a></li>
@@ -71,7 +71,7 @@
                 
                 <div class="educational-outcome">
                   <div class="education-icon-container">
-                    <img src="./img/group.svg" alt="group of people icon">
+                    <img src="./img/Group.svg" alt="group of people icon">
                   </div>
                   <h3>Leadership</h3>
                   <p>Your student will develop essential soft skills such as teamwork, communication, and problem-solving.</p>
