--- a/public/index.html
+++ b/public/index.html
@@ -28,40 +28,19 @@
             </div>
         </nav>
         <main>
-            <img src="./img/landingpage_photo.png" alt="Exothermic competing" class="banner">
-        </main>
-        <footer>
-            <div class="footer-content">
-                <img src="./img/ignite_logo.png" alt="Ignite Robotics Logo" class="footer-logo">
-                <div class="footer-info">
-                    <div>
-                        <h3>Our Address</h3>
-                        <p>1910 132nd Ave NE #7, <br/> Bellevue, WA 98005</p>
-                    </div>
-                    <div>
-                        <h3>Social Media</h3>
-                        <div class="footer-section">
-                            <p><a href="https://www.instagram.com/igniterobotics_/" class="footer-link">Instagram</a></p>
-                            <p><a href="https://www.linkedin.com/company/ignite-robotics" class="footer-link">LinkedIn</a></p>
-                            <p><a href="https://www.youtube.com/@igniterobotics" class="footer-link">Youtube</a></p>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="footer-section">
-                            <p><a href="#">Home</a></p>
-                            <p><a href="#">Exothermic</a></p>
-                            <p><a href="#">Quantum</a></p>
-                            <p><a href="#">Blaze Qubits</a></p>
-                            <p><a href="#">Summer Courses</a></p>
-                            <p><a href="#">Support Us</a></p>
-                            <p><a href="#">About Us</a></p>
-                            <p><a href="#">Contact</a></p>
-                            <p><a href="#">Login</a></p>
-                        </div>
-                    </div>
+            <div class="banner">
+                <img src="./img/landingpage_photo.png" alt="landing page photo" class="banner">
+              </div>
+              <div id="center-header-div" class="landing-page">
+                <div id="header-text-div-1">
+                  <h1 class="header-text">Empowering Students Through Robotics</h1>
+                  <p class="page-desc" id="page-desc">
+                    Learn, build, and compete with our innovators.
+                  </p>
+                  <button class="banner-button">Join a Program</button>
                 </div>
-            </div>
-            <p>A 501(c)(3) nonprofit.</p>
-        </footer>
-    </body>
+              </div>
+        </main>
+        
+
 </html>
